--- a/www/index.html
+++ b/www/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>Métro Map</title>
-    <!-- Load the script "js/main.js" as our entry point -->
+    <!-- load the script "js/main.js" as our entry point -->
     <script data-main="js/main" src="js/libs/require.js"></script>
     
     <link rel="stylesheet/less" type="text/css" href="css/main.less">
-	<script src="js/libs/less-1.3.0.min.js" type="text/javascript"></script>
+	<script src="js/libs/less.min.js" type="text/javascript"></script>
 </head>
 <body>
 
